--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -30,7 +30,7 @@ body {
 #header {
 	width: 100%;
 	height: 44px;
-	position: fixed;
+//	position: fixed;
 	top: 0px;
 	margin-top: 0px;
 	padding-top: 0px;
@@ -149,8 +149,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	position: fixed;
 	padding: 0px;
 	padding-bottom: 0px !important;
-//	bottom: -1px !important;
-	bottom: 0px;
+	bottom: -1px !important;
+//	bottom: 0px;
 	margin: 0px;
 	}
 	
