Scorecardin kaunistelua, kierroslista muistaa mihin kohtaan se oli skrollattu kun palataan scorenäkymästä

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -2,7 +2,13 @@
     <p>{{ 'profile.show.username'|trans({}, 'FOSUserBundle') }}: {{ user.username }}</p>
     <p>{{ 'profile.show.email'|trans({}, 'FOSUserBundle') }}: {{ user.email }}</p>
     
-    <p><a href="app/" data-ajax="false" data-rel="external" rel="external">Tuloskortti</a></p>
+    <p><script type="text/javascript">
+			window.location.href="app/";
+	</script>
+    
+    
+   
+<!--    <a href="app/" data-ajax="false" data-rel="external" rel="external">Tuloskortti</a></p> -->
     
     
 </div>
