--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -268,16 +268,12 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	margin: auto;
 	line-height: 1.1em;
 	border-style: solid;
-	border-radius: 4px;
+	border-radius: 8px;
 	border-top-color: #ADADAD;
 	border-bottom-color: #707070;
 	border-width: 1px;
-//	border-top-width: 1px;
-//	border-bottom-width: 1px;
 	border-right-color: #ADADAD;
 	border-left-color: #ADADAD;
-//	border-right-width: 1px;
-//	border-left-width: 1px;
 	font-size: 0.8em;
 	color: #fff;
 	text-shadow: 0px 1px 1px #000;
@@ -494,6 +490,70 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5c2a0', end
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
 
 }
+
+#teeYellow {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	padding: 1px;
+	background: rgb(254,245,224); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
+}	
+
+#teeRed {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	padding: 1px;
+	background: rgb(253,212,205); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(253,212,205,1) 0%, rgba(251,219,215,1) 50%, rgba(253,202,195,1) 51%, rgba(252,205,198,1) 71%, rgba(249,205,201,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(253,212,205,1)), color-stop(50%,rgba(251,219,215,1)), color-stop(51%,rgba(253,202,195,1)), color-stop(71%,rgba(252,205,198,1)), color-stop(100%,rgba(249,205,201,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdd4cd', endColorstr='#f9cdc9',GradientType=0 ); /* IE6-9 */
+
+}
+
+#teeBlue {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	padding: 1px;
+	background: rgb(236,248,252); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(236,248,252,1) 0%, rgba(231,246,253,1) 50%, rgba(212,238,250,1) 51%, rgba(212,236,254,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(236,248,252,1)), color-stop(50%,rgba(231,246,253,1)), color-stop(51%,rgba(212,238,250,1)), color-stop(100%,rgba(212,236,254,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf8fc', endColorstr='#d4ecfe',GradientType=0 ); /* IE6-9 */
+
+}
+
+#teeWhite {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	padding: 1px;
+	background: rgb(255,255,255); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+
+}
+
 
 #scoreCardButtons {
 	clear: both;
