Tallentaa kierroksen lopetusajan, näyttää kierroksen keston scorenäkymässä

--- a/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
@@ -85,7 +85,9 @@ var ApexEventProxy = function() {
 	self.getRound = function (data, done, always, fail) {
     	self.proxy.post('{{path('round_json_get')}}', data, done, fail, always);
     };
-
+	self.endRound = function (data, done, always, fail) {
+    	self.proxy.post('{{path('round_json_end')}}', data, done, fail, always);
+    };
 
 };
 var apexEventProxy = new ApexEventProxy();
