--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -8,6 +8,7 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script src="{{ asset('bundles/apexscore/js/jquery.mobile-1.3.0.min.js') }}"></script>
     <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script>
+    <script src="{{ asset('bundles/apexscore/js/date.format.js') }}"></script> 
 
 
     <link href="{{ asset('bundles/apexscore/css/mobiscroll-2.4.1.custom.min.css') }}" rel="stylesheet" type="text/css" />
@@ -41,7 +42,7 @@
 	<div id="header" data-role="header" data-theme="b" data-position="fixed">
 		<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
 		<div id="headerText">Rounds for <span data-bind="text: playerName"></span></div>
-		<a href="#courseSelect"  data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
+		<a href="#" data-bind="click: loadCourseSelect"  data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
 	</div>
 	
 	<script type="text/javascript">
@@ -119,7 +120,7 @@
 		</div>
 	</div>
 
-<!-- <div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>   -->
+<!-- <div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>    -->
 
 	<div id="holeData" >
 		<div  class="ui-grid-a" data-role="content" data-theme="c">
@@ -130,20 +131,28 @@
 				Hcp <span id="hcp" data-bind="text: currentHoleHcp"></span><br>
 				<span id="length" data-bind="text: currentHoleLength"></span> meters<br>
 			</div>
-			<div id="2" class="ui-block-b">
-				Player: <span id="player" data-bind="text: playerName"></span><br>
-				Handicap: <span id="playerhcp" data-bind="text: round_hcp"></span><br>
-				Course handicap: <span id="playerplayhcp" data-bind="text: playerPlayingHcp"></span><br>
-				Tee: <span id="playerTee" data-bind="text: round_tee"></span> <br>
-				Round duration: <span id="duration" data-bind="text: moment(roundStartTime()).fromNow(true)"></span><br>
+			<div id="2" class="ui-block-b" style="text-align: right">
+				Player: <span id="player" data-bind="text: playerName" style="font-weight: bold"></span><br>
+				Handicap: <span id="playerhcp" data-bind="text: round_hcp" style="font-weight: bold"></span><br>
+				Course handicap: <span id="playerplayhcp" data-bind="text: playerPlayingHcp" style="font-weight: bold"></span><br>
+				Tee: <span id="playerTee" data-bind="text: round_tee" style="font-weight: bold"></span><br>
+				Duration: <span id="duration" data-bind="text: roundDuration" style="font-weight: bold"></span><br>
+
+					<span data-bind="if: roundEndTime()">End time:
+					<span data-bind="text: moment(roundEndTime()).format('HH:mm:ss')" style="font-weight: bold">
+					</span>
+				</span> 
 			</div>
 		</div>
 	</div>
 
 	<div id="footer" data-role="footer" data-theme="a" data-position="fixed" data-id="score_footer">
-		<span style="float: left""><a href="#s_page" data-role="button" data-icon="arrow-l"  data-bind="click: previousHole" data-iconpos="notext"></a></span>
+		<span style="float: left">
+		<a href="#s_page" data-role="button" data-icon="arrow-l"  data-bind="click: previousHole" data-iconpos="notext"></a>
+		</span>
 
-		<span style="float: right"><a href="#s_page" data-role="button" data-icon="arrow-r" data-bind="click: nextHole"  data-iconpos="notext"></a>
+		<span style="float: right"> 
+		<a href="#s_page" data-role="button" data-icon="arrow-r" data-bind="click: nextHole"  data-iconpos="notext"></a>
 		</span>	
 	</div>
 </div>	
@@ -174,6 +183,22 @@
 	</div>
 
 	<div data-role="content" id="dialogContent" data-theme="b">
+	
+		<table id="scoreCardTable">
+			<tr>
+				<td id="scHeaders">Course</td>
+				<td id="scHeaders">Date</td>
+				<td id="scHeaders">Player</td>
+				<td id="scHeaders">Hcp</td>
+			</tr>
+			<tr>
+				<td id="scCells" data-bind="text: courseName"></td>
+				<td id="scCells" data-bind="text: moment(roundStartTime()).format('LL')"></td>
+				<td id="scCells" data-bind="text: playerName"></td>
+				<td id="scCells" data-bind="text: round_hcp"></td>
+			<tr>
+		</table> 
+	
 		<table id="scoreCardTable">
 			<tr>
 				<td id="scHeaders">Hole</td>
@@ -251,6 +276,7 @@
 					<!-- /ko -->
 				</tr>
 			</tbody>
+			<tbody>
 				<tr>
 					<td id="scTotals"></td>
 					<td id="scTotals" data-bind="text: coursePar"></td>
@@ -293,16 +319,6 @@
 				</tr>
 			</tbody>
 		</table>
-
-		<div style="padding-top: 2px">&nbsp;</div>
-		
-		<table id="scoreCardTable">
-			<tr>
-				<td id="scCells">Player: <span data-bind="text: playerName" style="font-weight: bold"></span></td>
-				<td id="scCells">Handicap: <span data-bind="text: round_hcp" style="font-weight: bold"></span></td>
-				<td id="scCells">Date: <span style="font-weight: bold" data-bind="text: moment(roundStartTime()).format('LL')"></span></td>
-			</tr>
-		</table>
 	</div>
 	
 	<div id="scoreCardButtons">
@@ -333,16 +349,16 @@
 
 				<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal" data-theme="e">
 					<input type="radio" name="red" id="tees_red" value="red" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
-					<label for="tees_red" style="border-color: red" id="prefsTees">Red</label>
+					<label for="tees_red" style="border-top-color: red" id="prefsTees">Red</label>
 
 					<input type="radio" name="blue" id="tees_blue" value="blue" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
-					<label for="tees_blue" style="border-color: blue" id="prefsTees">Blue</label>
+					<label for="tees_blue" style="border-top-color: blue" id="prefsTees">Blue</label>
 
 					<input type="radio" name="yellow" id="tees_yellow" value="yellow"  data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
-					<label for="tees_yellow" style="border-color: yellow" id="prefsTees">Yellow</label>
+					<label for="tees_yellow" style="border-top-color: yellow" id="prefsTees">Yellow</label>
 
 					<input type="radio" name="white" id="tees_white" value="white" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
-					<label for="tees_white" style="border-color: white" id="prefsTees">White</label>
+					<label for="tees_white" style="border-top-color: white" id="prefsTees">White</label>
 				</fieldset>
 			</div>
 <!--			
